Add Alyx blueprint import shortcut

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -42,6 +42,7 @@
             </div>
             <div class="project-list" id="projectList"></div>
             <button class="add-project-btn" onclick="addProject()" data-i18n="project.add">+ Neues Projekt</button>
+            <button class="alyx-import-btn" onclick="importAlyxOverview()" data-i18n="project.importAlyx.button">📦 Alyx-Blueprint importieren</button>
         </aside>
 
         <!-- Main Content -->
